--- a/resources/styles.css
+++ b/resources/styles.css
@@ -8,3 +8,11 @@
     padding: 0 12px;
     width: 100%;
 }
+
+
+.razorpay-payment-button{
+    background: #fff;
+    position: fixed;
+    bottom: 50;
+    left: 50;
+}
